syntax="proto3";

package api;

option go_package="./api";

service CardService {
  rpc GetById(Request) returns (Card) {}
}

message Request {
  int64 Id = 1;
}

message Card {
  int64 Id = 1;
  string Discount = 2;
  string Name = 3;
  int64 ClubId  = 4;
}